--- a/bare-metal/.cargo/config.toml
+++ b/bare-metal/.cargo/config.toml
@@ -1,7 +1,9 @@
 [unstable]
-build-std-features = ["compiler-builtins-mem"]
 build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "x86_64-rust_os.json"
+target = "x86_64-blog_os.json"
 
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
