--- a/memory/Cargo.toml
+++ b/memory/Cargo.toml
@@ -29,6 +29,9 @@ pc-keyboard = "0.5.0"
 # With the recursive_page_table feature, the bootloader maps an entry of the level 4 page table recursively. This allows the kernel to access the page tables as described in the Recursive Page Tables section.
 bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
 
+# A simple allocator crate for no_std applications
+linked_list_allocator = "0.9.0"
+
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
